--- a/Test_QLBTS/Test_QLBTS/Test_QLBTS.csproj
+++ b/Test_QLBTS/Test_QLBTS/Test_QLBTS.csproj
@@ -95,6 +95,12 @@
     <Compile Include="MainQuanLy.Designer.cs">
       <DependentUpon>MainQuanLy.cs</DependentUpon>
     </Compile>
+    <Compile Include="Order_ThanhToan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Order_ThanhToan.Designer.cs">
+      <DependentUpon>Order_ThanhToan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -152,6 +158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Order_ThanhToan.resx">
+      <DependentUpon>Order_ThanhToan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
