--- a/Test_QLBTS/DTO/DTO.csproj
+++ b/Test_QLBTS/DTO/DTO.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Connect.cs" />
     <Compile Include="Menu_DU.cs" />
+    <Compile Include="Phieunhap.cs" />
     <Compile Include="thanhvien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
