--- a/Test_QLBTS/Test_QLBTS/Test_QLBTS.csproj
+++ b/Test_QLBTS/Test_QLBTS/Test_QLBTS.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmDiemCong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDiemCong.Designer.cs">
+      <DependentUpon>FrmDiemCong.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmReportThanhvien.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -178,6 +184,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDiemCong.resx">
+      <DependentUpon>FrmDiemCong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmReportThanhvien.resx">
       <DependentUpon>frmReportThanhvien.cs</DependentUpon>
